--- a/hello_world.html
+++ b/hello_world.html
@@ -3,6 +3,7 @@
     <head>
         <title>Hi There</title>
         <meta>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Hello World</h1>
